Added kubernetes health check endpoints
